# safevault

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SAFEVAULT_AUTO_PROTECTION_PRODUCTIZATION_CODEX_PLAN.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/release/: v1-productization-acceptance.md
.github/workflows/: ci.yml
docs/: FAQ_EN.md  FAQ_ZH.md  INSTALL_EN.md  INSTALL_ZH.md  README.md  USER_GUIDE_EN.md  USER_GUIDE_ZH.md
docs/releases/: v0.2.0-rc1.md  v1-productization-acceptance.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.1.5.md  v1.1.6.md  v1.1.7.md  v1.1.8.md  v1.1.9.md
docs/zh/: CODEX_WORKFLOW.md  FAQ.md  GUI_GUIDE.md  RECOVERY_PLAYBOOK.md  SAFETY_MODEL.md  TROUBLESHOOTING.md  USER_MANUAL.md  auto-protection.md  automatic-backup.md  daemon-tray.md  onboarding.md  one-click-restore.md
packaging/windows/: SafeVaultSetup.iss  safevault-hidden.vbs
scripts/: auto_protect_smoke.ps1  build_windows_installer.ps1  daemon_smoke.ps1  gui_smoke.sh  install_windows_user.ps1  onboarding_smoke.py  release_check.sh  smoke.sh  uninstall_windows_user.ps1
src/safevault/: __init__.py  __main__.py  ai_protection.py  atomic.py  backup.py  cli.py  config.py  daemon.py  db.py  diffing.py  doctor.py  durations.py  errors.py  exporter.py  filetypes.py  hashing.py  ignore.py  importer.py  mass_change.py  models.py  object_store.py  paths.py  processes.py  protection.py  prune.py  recent.py  restore.py  retention.py  retention_cleanup.py  retention_engine.py  safety.py  sandbox.py  snapshot.py  startup.py  storage.py  symlinks.py  tray.py  verify.py  watcher.py
src/safevault/platform/: __init__.py  common.py  windows.py
src/safevault/ui/: __init__.py  app.py  auth.py  routes.py  schemas.py  services.py  session.py
src/safevault/ui/static/: safevault.css  safevault.js
src/safevault/ui/templates/: apply_result.html  base.html  dashboard.html  deleted.html  export_import.html  help.html  maintenance.html  onboarding.html  root_detail.html  roots.html  sandbox_detail.html  sandboxes.html  storage.html  versions.html
tests/: conftest.py  test_ai_protection.py  test_apply.py  test_apply_conflicts.py  test_apply_tamper_resistance.py  test_atomic.py  test_auto_protect.py  test_backup_scheduler.py  test_cli.py  test_continuous_protection.py  test_daemon.py  test_daemon_scheduler.py  test_db.py  test_db_pragmas.py  test_diffing.py  test_docs.py  test_doctor.py  test_e2e.py  test_e2e_hardened.py  test_export.py  test_ignore.py  test_import.py  test_management.py  test_mass_change.py  test_metadata_consistency.py  test_object_store.py  test_object_store_streaming.py  test_onboarding.py  test_processes.py  test_productization_docs.py  test_prune.py  test_prune_doctor.py  test_recent.py  test_release_acceptance.py  test_restore.py  test_retention.py  test_retention_cleanup.py  test_retention_engine.py  test_safety.py  test_sandbox.py  (+18 more)
