[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safevault"
version = "0.2.0rc1"
description = "Local file protection, versioned snapshots, and sandboxed command runner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "watchdog>=4.0",
  "blake3>=1.0",
  "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
  "httpx>=0.27",
  "twine>=5.0",
]
ui = [
  "fastapi>=0.115",
  "starlette>=0.46,<1.0",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]
tray = [
  "pystray>=0.19",
  "pillow>=10.0",
]

[project.scripts]
safevault = "safevault.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/safevault"]

[tool.hatch.build.targets.wheel.force-include]
"README.zh-CN.md" = "safevault/ui/docs/README.zh-CN.md"
"docs/zh" = "safevault/ui/docs/zh"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
packages = ["safevault"]
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
