[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safevault"
version = "1.1.4"
description = "Continuous local file protection, recovery, and safe AI coding workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "watchdog>=4.0",
  "blake3>=1.0",
  "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
  "httpx>=0.27",
  "twine>=5.0",
]
ui = [
  "fastapi>=0.115",
  "starlette>=0.46,<1.0",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]
tray = [
  "pystray>=0.19",
  "pillow>=10.0",
]
installer = [
  "pyinstaller>=6.0",
]

[project.scripts]
safevault = "safevault.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/safevault"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/AGENTS.md",
  "/docs/dev",
]

[tool.hatch.build.targets.wheel.force-include]
"README.zh-CN.md" = "safevault/ui/docs/README.zh-CN.md"
"docs/README.md" = "safevault/ui/docs/README.md"
"docs/INSTALL_EN.md" = "safevault/ui/docs/INSTALL_EN.md"
"docs/INSTALL_ZH.md" = "safevault/ui/docs/INSTALL_ZH.md"
"docs/FAQ_EN.md" = "safevault/ui/docs/FAQ_EN.md"
"docs/FAQ_ZH.md" = "safevault/ui/docs/FAQ_ZH.md"
"docs/USER_GUIDE_EN.md" = "safevault/ui/docs/USER_GUIDE_EN.md"
"docs/USER_GUIDE_ZH.md" = "safevault/ui/docs/USER_GUIDE_ZH.md"
"docs/zh" = "safevault/ui/docs/zh"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
packages = ["safevault"]
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
